--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -14,9 +14,9 @@
 	<title>JSF 2.0 Hello World</title>
 </h:head>
 <h:body>
-	<h:outputStylesheet name="css/l.css" />
-	<h:form>
-		<!--  <p:growl id="messages"/> -->
+	<h:outputStylesheet name="css/u.css" />
+	<!-- <h:form>
+		 <p:growl id="messages"/>
 		<p:menubar>
 			<p:submenu label="Open" icon="ui-icon-document">
 				<p:menuitem value="XML File" icon="ui-icon-document-b"
@@ -39,11 +39,18 @@
 				<p:growl id="messages" showDetail="true" />
 			</h:form>
 		</p:dialog>
-	</h:form>
-	<p:panelGrid styleClass = "foo">
+	</h:form> -->
+	<p:panelGrid styleClass="main-panel">
 		<p:row>
-			<p:column rowspan="2" colspan="3" style="width:250px;height:575px;padding-top:4px;">
-				<p:tree value="#{treeBean.root}" var="node" dynamic="true"
+			<p:column rowspan="2" colspan="3"
+				style="width:250px;height:680px;padding-top:4px;">
+				<p:tabView styleClass="left-tab">
+					<p:tab title="Menu" styleClass="content">
+					</p:tab>
+					<p:tab title="Tree">
+					</p:tab>
+				</p:tabView>
+				<!-- <p:tree value="#{treeBean.root}" var="node" dynamic="true"
 					selectionMode="single" selection="#{treeBean.selectedNode}">
 					<p:treeNode expandedIcon="ui-icon ui-icon-folder-open"
 						collapsedIcon="ui-icon ui-icon-folder-collapsed">
@@ -57,10 +64,11 @@
 						</h:form>
 
 					</p:treeNode>
-				</p:tree>
+				</p:tree> -->
 			</p:column>
-			<p:column colspan="9" style="width:1100px;height:350px;padding-left:10px;padding-top:4px;">
-					<p:dataTable>
+			<p:column colspan="9"
+				style="width:1100px;height:350px;padding-left:10px;padding-top:6px;">
+				<p:dataTable>
 					<p:column headerText="Column Name">
 						<h:outputText value="" />
 					</p:column>
@@ -81,18 +89,39 @@
 						<p:inputTextarea rows="4" cols="20" autoResize="false" />
 					</p:column>
 				</p:dataTable>
-				
+
 			</p:column>
 		</p:row>
 		<p:row>
-			<p:column style="padding-left:10px;padding-top:4px;">
-				<p:tabView>
+			<p:column style="padding-left:10px;padding-top:4px;height:320px;">
+				<p:tabView style="height: 100%;">
 					<p:tab title="Column">
-						<h:panelGrid >
-						</h:panelGrid>
+						<div class="ui-g">
+							<div class="ui-g-12 ui-md-6 col-content">
+								<h:outputLabel for="name" value="Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" />
+								<h:inputText id="name" value="name"
+									readonly="#{facesContext.renderResponse}" />
+							</div>
+							<div class="ui-g-12 ui-md-6 col-content">
+								<h:outputText value="Primary Key: " />
+								<p:selectBooleanCheckbox value="true" />
+							</div>
+						</div>
+						<div class="ui-g">
+							<div class="ui-g-12 ui-md-6 col-content">
+								<h:outputLabel for="expression" value="Default/Expression:&nbsp;&nbsp;&nbsp;&nbsp;" />
+								<p:inputTextarea id="expression" rows="6" cols="33"
+									value="something here"
+									readonly="#{facesContext.renderResponse}" />
+							</div>
+							<div class="ui-g-12 ui-md-6 col-content">
+								<h:outputText value="Auto Increment: " />
+								<p:selectBooleanCheckbox value="true" />
+							</div>
+						</div>
 					</p:tab>
 					<p:tab title="Foreign Key">
-						<h:panelGrid >
+						<h:panelGrid>
 						</h:panelGrid>
 					</p:tab>
 				</p:tabView>
