--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,11 +1,135 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Insert title here</title>
-</head>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jstl/core">
+
+<h:head>
+	<title>JSF 2.0 Hello World</title>
+</h:head>
 <h:body>
-		ndwionuihbd
+	<h:outputStylesheet name="css/u.css" />
+	<!-- <h:form>
+		 <p:growl id="messages"/>
+		<p:menubar>
+			<p:submenu label="Open" icon="ui-icon-document">
+				<p:menuitem value="XML File" icon="ui-icon-document-b"
+					oncomplete="PF('dlgxml').show()" />
+				<p:menuitem value="Zip File" icon="ui-icon-folder-collapsed"
+					oncomplete="PF('dlgzip').show()" />
+			</p:submenu>
+			<p:submenu label="Edit" icon="ui-icon-pencil">
+			</p:submenu>
+		</p:menubar>
+		<p:dialog header="Choose an xml file..." widgetVar="dlgxml"
+			modal="true" height="250" weigh="250">
+			<h:form enctype="multipart/form-data">
+				<p:fileUpload style="weigh:250px;"
+					fileUploadListener="#{fileUploadBean.handleFileUpload}"
+					mode="advanced" dragDropSupport="true" auto="true"
+					update="messages" allowTypes="/(\.|\/)(hbm.xml|zip)$/" />
+				<p:growl id="messages" showDetail="true" />
+			</h:form>
+		</p:dialog>
+	</h:form> -->
+	<p:panelGrid styleClass="main-panel">
+		<p:row>
+			<p:column rowspan="2" colspan="3"
+				style="width:250px;height:680px;padding-top:4px;">
+				<h:form>
+					<p:tabView styleClass="left-tab">
+						<p:tab title="Menu" styleClass="content">
+						</p:tab>
+						<p:tab title="Tree">
+							<p:tree value="#{treeBean.root}" var="node" dynamic="true"
+								selectionMode="single" selection="#{treeBean.selectedNode}">
+								<p:treeNode type="table" icon="ui-icon ui-icon-calculator">
+									<h:outputText value="#{node.tableName}" />
+								</p:treeNode>
+								<p:treeNode type="column" icon="ui-icon-grip-dotted-vertical">
+									<h:outputText value="#{node.name}" />
+								</p:treeNode>
+								
+								<p:ajax event="select" listener="#{treeBean.onSelectNode}"></p:ajax>
+							</p:tree>
+						</p:tab>
+					</p:tabView>
+				</h:form>
+			</p:column>
+			<p:column colspan="9"
+				style="width:1100px;height:350px;padding-left:10px;padding-top:6px;">
+				<p:dataTable id="dttable" var="column"
+					value="#{tableBean.table.listColumn}">
+					<p:column headerText="Column Name">
+						<h:outputText value="#{column.name}" />
+					</p:column>
+
+					<p:column headerText="Type">
+						<h:outputText value="#{column.type} (#{column.length})" />
+					</p:column>
+
+					<p:column headerText="Primary Key">
+						<p:selectBooleanCheckbox value="#{column.primaryKey}" />
+					</p:column>
+
+					<p:column headerText="Auto Increment">
+						<p:selectBooleanCheckbox value="#{column.autoIcrement}" />
+					</p:column>
+					<p:column headerText="Not Null">
+						<p:selectBooleanCheckbox value="#{column.not_null}" />
+					</p:column>
+
+
+				</p:dataTable>
+
+			</p:column>
+		</p:row>
+		<p:row>
+			<p:column style="padding-left:10px;padding-top:4px;height:320px;">
+				<p:tabView style="height: 100%;">
+					<p:tab title="Column">
+						<div class="ui-g">
+							<div class="ui-g-12 ui-md-6 col-content">
+								<h:outputLabel for="name"
+									value="Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" />
+								<h:inputText id="name" value="name"
+									readonly="#{facesContext.renderResponse}" />
+							</div>
+							<div class="ui-g-12 ui-md-6 col-content">
+								<h:outputText value="Primary Key: " />
+								<p:selectBooleanCheckbox value="true" />
+							</div>
+						</div>
+						<div class="ui-g">
+							<div class="ui-g-12 ui-md-6 col-content">
+								<h:outputLabel for="expression"
+									value="Default/Expression:&nbsp;&nbsp;&nbsp;&nbsp;" />
+								<p:inputTextarea id="expression" rows="6" cols="33"
+									value="something here"
+									readonly="#{facesContext.renderResponse}" />
+							</div>
+							<div class="ui-g-12 ui-md-6 col-content">
+								<h:outputText value="Auto Increment: " />
+								<p:selectBooleanCheckbox value="true" />
+							</div>
+						</div>
+					</p:tab>
+					<p:tab title="Foreign Key">
+						<h:panelGrid>
+						</h:panelGrid>
+					</p:tab>
+				</p:tabView>
+			</p:column>
+		</p:row>
+
+	</p:panelGrid>
+
+
 </h:body>
 </html>
