--- a/WebContent/demo2.xhtml
+++ b/WebContent/demo2.xhtml
@@ -181,7 +181,7 @@
 										<br></br>
 										<div class="row">
 											<div class="form-group">
-												<label style="width:180px;text-align:right;" for="pwd4" class="col-sm-2">Auto Increament:</label>
+												<label style="width:180px;text-align:right;" for="pwd4" class="col-sm-2">Auto Increment:</label>
 												<div class="col-sm-2">
 													<h:selectBooleanCheckbox value="#{columnBean.column.autoIncrement}" id="pwd4" />
 												</div>
