--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -22,7 +22,7 @@
 	<h:outputScript library="webjars"
 		name="bootstrap/3.3.6/js/bootstrap.min.js" />
 	<h:outputStylesheet name="css/lj.css"></h:outputStylesheet>
-	<h:outputScript name="js/ap.js"></h:outputScript>
+	<h:outputScript name="js/aq.js"></h:outputScript>
 
 </h:head>
 <h:body>
@@ -68,6 +68,13 @@
 							varStatus="tbStatus">
 							<li class="tree-root nav-header"><label class="tree-toggle">#{table.tableName}</label>
 								<ul class="nav">
+									<ui:repeat var="fkey" value="#{table.listRelationship}">
+										<input type="hidden" class="rela-table" value="#{table.tableName}" />
+										<input type="hidden" class="rela-col" value="#{fkey.referColumn}" />
+										<input type="hidden" class="rela-type" value="#{fkey.type}" />
+										<input type="hidden" class="rela-rftable" value="#{fkey.referTable}" />
+										<input type="hidden" class="rela-rfcol" value="#{fkey.referColumn}" />
+									</ui:repeat>
 									<ui:repeat var="col" value="#{table.listColumn}"
 										varStatus="colStatus">
 
@@ -79,7 +86,7 @@
 										<input type="hidden" class="col-nn" value="#{col.notNull}" />
 										<input type="hidden" class="col-fk" value="#{col.foreignKey}" />
 										<input type="hidden" class="col-length" value="#{col.length}" />
-										<li><a href="#" contenteditable="false">#{col.name}</a></li>
+										<li><a class="tree-node" href="#" contenteditable="false">#{col.name}</a></li>
 									</ui:repeat>
 								</ul></li>
 						</ui:repeat>
@@ -93,23 +100,23 @@
 						<li><a data-toggle="tab" href="#dttabler">Foreign Keys</a></li>
 					</ul>
 					<div class="tab-content">
-						<div class="tab-pane fade in active">
+						<div id="dttable" class="tab-pane fade in active">
 							<div class="row table-wrap"
 								style="height: 250px; overflow-x: auto; overflow-y: scroll;">
 								<table class="table table-striped table-bordered">
-								<thead>
-									<tr>
-										<th class="col-md-2">Column</th>
-										<th class="col-md-2">Type</th>
-										<th class="col-md-2">NN</th>
-										<th class="col-md-2">PK</th>
-										<th class="col-md-2">FK</th>
-										<th class="col-md-2">AI</th>
-									</tr>
-								</thead>
-								<tbody class="table-info">
-								</tbody>
-							</table>
+									<thead>
+										<tr>
+											<th class="col-md-2">Column</th>
+											<th class="col-md-2">Type</th>
+											<th class="col-md-2">NN</th>
+											<th class="col-md-2">PK</th>
+											<th class="col-md-2">FK</th>
+											<th class="col-md-2">AI</th>
+										</tr>
+									</thead>
+									<tbody class="table-info">
+									</tbody>
+								</table>
 							</div>
 							<div class="row detail-wrap">
 								<div class="heading">
@@ -119,9 +126,8 @@
 									<h:form>
 										<div class="col-md-6">
 											<div class="form-group">
-												<label for="usr">Name Column</label>
-												<h:inputText type="text" class="form-control input-form"
-													value="#{columnBean.column.name}" id="usr" />
+												<label for="usr">Name Column</label> <input type="text"
+													class="col-name-detail form-control" name="name" />
 											</div>
 											<div class="form-group">
 												<label for="sel1">Type Data</label> <select
@@ -135,10 +141,11 @@
 												</select>
 											</div>
 											<div class="form-group">
-												<label for="pwd">Length</label>
-												<h:inputText type="text" class="form-control input-from"
+												<label for="pwd">Length</label> <input type="text"
+													class="col-length-detail form-control" name="length" />
+												<!-- <h:inputText type="text" class="form-control input-from"
 													id="pwd" style="width:50%"
-													value="#{columnBean.column.length}" />
+													value="#{columnBean.column.length}" /> -->
 											</div>
 										</div>
 
@@ -149,8 +156,7 @@
 													<label style="width: 180px; text-align: right;" for="pwd1"
 														class="col-sm-2">Not Null:</label>
 													<div class="col-sm-2">
-														<h:selectBooleanCheckbox
-															value="#{columnBean.column.notNull}" id="pwd1" />
+														<input type="checkbox" class="col-nn-detail" name="bNN" />
 													</div>
 												</div>
 											</div>
@@ -161,8 +167,7 @@
 													<label style="width: 180px; text-align: right;" for="pwd2"
 														class="col-sm-2">Primary Key:</label>
 													<div class="col-sm-2">
-														<h:selectBooleanCheckbox
-															value="#{columnBean.column.primaryKey}" id="pwd2" />
+														<input type="checkbox" class="col-pk-detail" name="bPK" />
 													</div>
 												</div>
 											</div>
@@ -173,8 +178,7 @@
 													<label style="width: 180px; text-align: right;" for="pwd3"
 														class="col-sm-2">Foreign Key:</label>
 													<div class="col-sm-2">
-														<h:selectBooleanCheckbox
-															value="#{columnBean.column.foreignKey}" id="pwd3" />
+														<input type="checkbox" class="col-fk-detail" name="bFK" />
 													</div>
 												</div>
 											</div>
@@ -184,8 +188,7 @@
 													<label style="width: 180px; text-align: right;" for="pwd4"
 														class="col-sm-2">Auto Increament:</label>
 													<div class="col-sm-2">
-														<h:selectBooleanCheckbox
-															value="#{columnBean.column.autoIncrement}" id="pwd4" />
+														<input type="checkbox" class="col-ai-detail" name="bAI" />
 													</div>
 												</div>
 											</div>
@@ -201,31 +204,20 @@
 
 						</div>
 						<div id="dttabler" class="tab-pane fade">
-							<div class="row table-wrap">
-								<h:dataTable scrollable="true"
-									value="#{tableBean.table.listRelationship}" var="foreignkey"
-									class="table table-striped table-bordered">
-									<h:column>
-										<f:facet name="header">Table</f:facet>
-										<h:outputText value="#{tableBean.table.tableName}"></h:outputText>
-									</h:column>
-									<h:column>
-										<f:facet name="header">Column</f:facet>
-										<h:outputText value="#{foreignkey.referColumn}"></h:outputText>
-									</h:column>
-									<h:column>
-										<f:facet name="header">type</f:facet>
-										<h:outputText value="#{foreignkey.type}"></h:outputText>
-									</h:column>
-									<h:column>
-										<f:facet name="header">Refer Table</f:facet>
-										<h:outputText value="#{foreignkey.referTable}"></h:outputText>
-									</h:column>
-									<h:column>
-										<f:facet name="header"> Refer Column</f:facet>
-										<h:outputText value="#{foreignkey.referColumn}"></h:outputText>
-									</h:column>
-								</h:dataTable>
+							<div class="row table-wrap" style="height: 250px; overflow-x: auto; overflow-y: scroll;">
+								<table class="table table-striped table-bordered">
+									<thead>
+										<tr>
+											<th class="col-md-2">Table</th>
+											<th class="col-md-2">Column</th>
+											<th class="col-md-2">Type</th>
+											<th class="col-md-2">Refer Table</th>
+											<th class="col-md-2">Refer Column</th>
+										</tr>
+									</thead>
+									<tbody class="relation-info">
+									</tbody>
+								</table>
 							</div>
 							<div class="row detail-wrap">
 								<div class="heading">
@@ -234,27 +226,23 @@
 								<div class="col-md-6">
 									<div class="form-group">
 										<label for="usr3">Table</label>
-										<h:inputText type="text" class="form-control input-form"
-											value="#{tableBean.table.tableName}" id="usr3" />
+										<input type="text" class="rela-table-detail form-control" name="relaTable" />
 									</div>
 									<br></br>
 									<div class="form-group">
 										<label for="usr4">Column</label>
-										<h:inputText type="text" class="form-control input-form"
-											id="usr4" />
+										<input type="text" class="rela-col-detail form-control" name="relaCol" />
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
 										<label for="usr1">Refer Table</label>
-										<h:inputText type="text" class="form-control input-form"
-											id="usr1" />
+										<input type="text" class="rela-rftable-detail form-control" name="relaRfTable" />
 									</div>
 									<br></br>
 									<div class="form-group">
 										<label for="usr2">Refer Column</label>
-										<h:inputText type="text" class="form-control input-form"
-											id="usr2" />
+										<input type="text" class="rela-rfcol-detail form-control" name="relaRfCol" />
 									</div>
 								</div>
 
