--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -44,16 +44,21 @@
 								<h:commandLink action="#{downloadBean.download}">
 									<span class="glyphicon glyphicon-download"></span>Download</h:commandLink>
 							</h:form></li>
-						<li><a href="#"><span class="glyphicon glyphicon-refresh"></span>
-								Reset All</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-repeat"></span>
-								Undo</a></li>
-						<li><a href="#"><span
-								class="glyphicon glyphicon-floppy-disk"></span> Save</a></li>
+						<li><h:form>
+								<h:commandLink id="reset-data-trigger"
+									action="#{modifyBean.resetdata}">
+									<span class="glyphicon glyphicon-refresh"></span>Reset All</h:commandLink>
+							</h:form></li>
+						<li><h:form>
+								<h:commandLink id="reset-data-trigger"
+									action="#{modifyBean.save}">
+									<span class="glyphicon glyphicon-refresh"></span>Save</h:commandLink>
+							</h:form></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><h:link href="#">
-								<span class="glyphicon glyphicon-envelope"></span> Contact</h:link></li>
+						<li><a href="#"> <span
+								class="glyphicon glyphicon-envelope"></span> Contact
+						</a></li>
 						<li><a href="#"><span
 								class="glyphicon glyphicon-question-sign"></span> Help</a></li>
 					</ul>
@@ -69,15 +74,21 @@
 							<li class="tree-root nav-header"><label class="tree-toggle">#{table.tableName}</label>
 								<ul class="nav">
 									<ui:repeat var="fkey" value="#{table.listRelationship}">
-										<input type="hidden" class="rela-table" value="#{table.tableName}" />
-										<input type="hidden" class="rela-col" value="#{fkey.referColumn}" />
+										<input type="hidden" class="rela-table"
+											value="#{table.tableName}" />
+										<input type="hidden" class="rela-col"
+											value="#{fkey.referColumn}" />
 										<input type="hidden" class="rela-type" value="#{fkey.type}" />
-										<input type="hidden" class="rela-rftable" value="#{fkey.referTable}" />
-										<input type="hidden" class="rela-rfcol" value="#{fkey.referColumn}" />
+										<input type="hidden" class="rela-rftable"
+											value="#{fkey.referTable}" />
+										<input type="hidden" class="rela-rfcol"
+											value="#{fkey.referColumn}" />
 									</ui:repeat>
 									<ui:repeat var="col" value="#{table.listColumn}"
 										varStatus="colStatus">
-
+										<input type="hidden" class="col-id" value="#{col.tempId}" />
+										<input type="hidden" class="col-tableid"
+											value="#{col.tableId}" />
 										<input type="hidden" class="col-name" value="#{col.name}" />
 										<input type="hidden" class="col-type" value="#{col.type}" />
 										<input type="hidden" class="col-pk" value="#{col.primaryKey}" />
@@ -125,27 +136,49 @@
 								<div>
 									<h:form>
 										<div class="col-md-6">
+											<h:panelGroup styleClass="col-id-pane">
+												<h:inputHidden value="#{columnBean.column.tempId}" />
+											</h:panelGroup>
+											<h:panelGroup styleClass="col-tableid-pane">
+												<h:inputHidden value="#{columnBean.column.tableId}" />
+											</h:panelGroup>
 											<div class="form-group">
-												<label for="usr">Name Column</label> <input type="text"
-													class="col-name-detail form-control" name="name" />
+												<label for="usr">Name Column</label>
+
+												<h:inputText type="text"
+													class="col-name-detail form-control"
+													value="#{columnBean.column.name}" />
+												<!-- <input type="text"
+													class="col-name-detail form-control" name="name" /> -->
 											</div>
 											<div class="form-group">
-												<label for="sel1">Type Data</label> <select
-													class="form-control input-form" id="sel1">
+												<label for="sel1">Type Data</label>
+												<!-- <select
+													class="col-type-detail form-control input-form" id="sel1">
 													<option selected="selected">#{columnBean.column.type}</option>
-													<option>VARCHAR()</option>
-													<option>INTEGER</option>
-													<option>DOUBLE</option>
-													<option>DATE</option>
-													<option>FLOAT</option>
-												</select>
+													<option value="VARCHAR">VARCHAR()</option>
+													<option value="INTEGER">INTEGER</option>
+													<option value="DOUBLE">DOUBLE</option>
+													<option value="DATE">DATE</option>
+													<option value="FLOAT">FLOAT</option>
+												</select> -->
+												<h:selectOneMenu
+													class="col-type-detail form-control input-form"
+													value="#{columnBean.column.type}">
+													<f:selectItem itemValue="VARCHAR" itemLabel="VARCHAR()" />
+													<f:selectItem itemValue="INTEGER" itemLabel="INTEGER" />
+													<f:selectItem itemValue="DOUBLE" itemLabel="DOUBLE" />
+													<f:selectItem itemValue="DATE" itemLabel="DATE" />
+													<f:selectItem itemValue="FLOAT" itemLabel="FLOAT" />
+												</h:selectOneMenu>
 											</div>
 											<div class="form-group">
-												<label for="pwd">Length</label> <input type="text"
-													class="col-length-detail form-control" name="length" />
-												<!-- <h:inputText type="text" class="form-control input-from"
-													id="pwd" style="width:50%"
-													value="#{columnBean.column.length}" /> -->
+												<label for="pwd">Length</label>
+												<!-- <input type="text"
+													class="col-length-detail form-control" name="length" /> -->
+												<h:inputText type="text"
+													class="col-length-detail form-control input-from"
+													value="#{columnBean.column.length}" />
 											</div>
 										</div>
 
@@ -156,7 +189,9 @@
 													<label style="width: 180px; text-align: right;" for="pwd1"
 														class="col-sm-2">Not Null:</label>
 													<div class="col-sm-2">
-														<input type="checkbox" class="col-nn-detail" name="bNN" />
+														<h:selectBooleanCheckbox class="col-nn-detail"
+															value="#{columnBean.column.notNull}" />
+														<!-- <input type="checkbox" class="col-nn-detail" name="bNN" /> -->
 													</div>
 												</div>
 											</div>
@@ -167,18 +202,22 @@
 													<label style="width: 180px; text-align: right;" for="pwd2"
 														class="col-sm-2">Primary Key:</label>
 													<div class="col-sm-2">
-														<input type="checkbox" class="col-pk-detail" name="bPK" />
+														<h:selectBooleanCheckbox class="col-pk-detail"
+															value="#{columnBean.column.primaryKey}" />
+														<!-- <input type="checkbox" class="col-pk-detail" name="bPK" /> -->
 													</div>
 												</div>
 											</div>
 											<br></br>
-											<div class="row ">
+											<div class="row">
 												<div class="form-group">
 
 													<label style="width: 180px; text-align: right;" for="pwd3"
 														class="col-sm-2">Foreign Key:</label>
 													<div class="col-sm-2">
-														<input type="checkbox" class="col-fk-detail" name="bFK" />
+														<h:selectBooleanCheckbox class="col-fk-detail"
+															value="#{columnBean.column.foreignKey}" />
+														<!-- <input type="checkbox" class="col-fk-detail" name="bFK" /> -->
 													</div>
 												</div>
 											</div>
@@ -188,7 +227,9 @@
 													<label style="width: 180px; text-align: right;" for="pwd4"
 														class="col-sm-2">Auto Increament:</label>
 													<div class="col-sm-2">
-														<input type="checkbox" class="col-ai-detail" name="bAI" />
+														<h:selectBooleanCheckbox class="col-ai-detail"
+															value="#{columnBean.column.autoIncrement}" />
+														<!-- <input type="checkbox" class="col-ai-detail" name="bAI" /> -->
 													</div>
 												</div>
 											</div>
@@ -204,7 +245,8 @@
 
 						</div>
 						<div id="dttabler" class="tab-pane fade">
-							<div class="row table-wrap" style="height: 250px; overflow-x: auto; overflow-y: scroll;">
+							<div class="row table-wrap"
+								style="height: 250px; overflow-x: auto; overflow-y: scroll;">
 								<table class="table table-striped table-bordered">
 									<thead>
 										<tr>
@@ -223,29 +265,41 @@
 								<div class="heading">
 									<h2 style="border-bottom: 5px solid #03a9f4;">Detail</h2>
 								</div>
-								<div class="col-md-6">
-									<div class="form-group">
-										<label for="usr3">Table</label>
-										<input type="text" class="rela-table-detail form-control" name="relaTable" />
-									</div>
-									<br></br>
-									<div class="form-group">
-										<label for="usr4">Column</label>
-										<input type="text" class="rela-col-detail form-control" name="relaCol" />
-									</div>
+								<div>
+									<h:form>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label for="usr3">Table</label> <input type="text"
+													class="rela-table-detail form-control" name="relaTable"
+													readonly="readonly" />
+											</div>
+											<br></br>
+											<div class="form-group">
+												<label for="usr4">Column</label> <input type="text"
+													class="rela-col-detail form-control" name="relaCol" />
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label for="usr1">Refer Table</label>
+												<!-- <input type="text"
+											class="rela-rftable-detail form-control" name="relaRfTable" /> -->
+												<h:selectOneMenu class="rela-rftable-detail form-control"
+													value="#{columnBean.column.type}">
+													<ui:repeat var="table" value="#{tableBean.list}">
+														<f:selectItem itemValue="#{table.tableName}"
+															itemLabel="#{table.tableName}" />
+													</ui:repeat>
+												</h:selectOneMenu>
+											</div>
+											<br></br>
+											<div class="form-group">
+												<label for="usr2">Refer Column</label> <input type="text"
+													class="rela-rfcol-detail form-control" name="relaRfCol" />
+											</div>
+										</div>
+									</h:form>
 								</div>
-								<div class="col-md-6">
-									<div class="form-group">
-										<label for="usr1">Refer Table</label>
-										<input type="text" class="rela-rftable-detail form-control" name="relaRfTable" />
-									</div>
-									<br></br>
-									<div class="form-group">
-										<label for="usr2">Refer Column</label>
-										<input type="text" class="rela-rfcol-detail form-control" name="relaRfCol" />
-									</div>
-								</div>
-
 							</div>
 						</div>
 					</div>
@@ -310,6 +364,21 @@
 							$('#zipModal').modal('hide');
 						</script>
 					</h:panelGroup>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="noticeModal" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Modal Header</h4>
+				</div>
+				<div class="modal-body">
+					<p>Some text in the modal.</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
